--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,3 @@
 # redino
 
-redino program.
-
-## Installation
-
-```sh
-pip install redino
-```
-
+Makes life easier keeping Python data in Redis.
